@@ -1,3 +1,4 @@
+Fixed: Pie chart disappears with friction on in left well of double-well on tab 2
 Fixed: Speed readout doesn't reset on "reset all"
 # 2.08.23 (60707) Jan 27, 2012
 Fixed: Track button screen shots have track overlapping the control panel
